# lidar-game

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  vcpkg.json
resources/models/: Sponza-old.gltf  cube.blend  cube.fbx  cube.stl  platform-scene.blend  platform-scene.gltf  platform-scene2.gltf
resources/shaders/: SimpleModel.hlsl  SimpleTriangle.hlsl  WorldGrid.hlsl
src/lidar-common/components/: Hierarchy.h  Model.h  Name.h  Transform.h
src/lidar-common/data/: Entity.cpp  Entity.h
src/lidar-common/data/Archive/: ArchiveMgr.h  FolderArchive.h  IArchive.h
src/lidar-common/graphics/: IWindow.cpp  IWindow.h  Renderer.h  UnifiedBuffer.h  WindowMgr.h
src/lidar-common/graphics/imgui/: imgui.cpp  imgui.h
src/lidar-common/graphics/imgui/backends/: imgui_impl_diligent.cpp  imgui_impl_diligent.h
src/lidar-common/graphics/imgui_extensions/: ImFileDialog.cpp
src/lidar-common/graphics/renderers/: WorldRenderer.cpp  WorldRenderer.h
src/lidar-common/loaders/: AsyncLoader.h  ModelLoader.cpp  ModelLoader.h  SceneLoader.cpp  SceneLoader.h
src/lidar-common/util/: AssimpArchiveIOHandler.h  RemoteSessionChecker.h  stb_impl.cpp  stb_perlin.h  stb_sprintf.h
src/lidar-common/views/: IViewport.h  WorldView.h
src/lidar-editor/: main.cpp
src/lidar-editor/windows/: MainWindow.cpp  MainWindow.h
src/lidar-game/: main.cpp
src/lidar-game/windows/: MainWindow.cpp  MainWindow.h
